--- a/main.css
+++ b/main.css
@@ -1,16 +1,22 @@
 #laverne {
     margin-top: 15px;
     margin-right: -15px;
+    margin-left: 0px;
     background: url("GUI.png") -16px -50px no-repeat;
     height: 220px;
+    width: 230px;
 }
 
+#laverne + h4, #garrett + h4 {
+    width: 220px;
+}
 #garrett {
         margin-top: 15px;
     margin-right: -15px;
-margin-left: -15px;
+margin-left: 0px;
     background: url("GUI.png") -675px -50px no-repeat;
     height: 220px;
+    width: 220px;
 }
 
 #horsebox {
